--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,7 +1,8 @@
   <body>
     <header>
-        <nav class="navbar navbar-pills navbar-full navbar-fixed-top" role="navigation" style="background-color: black">
+        <nav class="navbar navbar-pills navbar-full navbar-default navbar-fixed-top" role="navigation">
           <div class="container">
+            <% if(authenticated === false){ %>
             <div class="container-fluid">
         <div class="navbar-header navbar-default">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
@@ -15,19 +16,45 @@
         
         <!-- menu -->
         <div class="collapse navbar-collapse navbar-right" id="mynavbar">
-          <form class="navbar-form navbar-collapse navbar-right">
+          <form class="navbar-form navbar-collapse navbar-right" method="GET" action="/search">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search" name="place">
+              <input type="text" class="form-control" placeholder="Search" name="location" id="place" />
               <button type="submit" class="btn btn-default" value="search">Go</button>
             </div>
           </form>
             <ul class="nav navbar-nav navbar-right nav-tabs">
-            <li><a href="/login">Login In</a></li>
-            <li><a href="/signup">Sign Up</a></li>
+              
+            <li><a href="/auth/github" class="btn btn-block"><i>&#xf09b;</i></a></li>
             </ul>
         </div>
     </div>
-         
+         <% }else{ %>
+         <div class="container-fluid">
+        <div class="navbar-header navbar-default">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">FFC Nightlife</a>
+        </div>
+        
+        <!-- menu -->
+        <div class="collapse navbar-collapse navbar-right" id="mynavbar">
+          <form class="navbar-form navbar-collapse navbar-right" method="GET" action="/search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search" name="location" id="place" />
+              <button type="submit" class="btn btn-default" value="search">Go</button>
+            </div>
+          </form>
+            <ul class="nav navbar-nav navbar-right nav-tabs">
+              
+            <li><a href="/auth/github" class="btn btn-block">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+    <%}%>
           </div>
         </nav>
       </header>
