fixes login bug

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,7 @@
     <div class="bars">
       <p class="names"><a href = <%=bars[i].url%>><%= bars[i].name %></a></p></br>
       <div class="image"><img src=<%=bars[i].image_url%> width="150px"></img></div></br>
+       <a id="<%= bars[i].id %>" class="going btn btn-primary"><%=bars[i].totalAttending%> Going</a></br>
       <%= bars[i].location.address1 %></br>
       <%= bars[i].rating %></br>
     </div>
