--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -50,7 +50,7 @@
           </form>
             <ul class="nav navbar-nav navbar-right nav-tabs">
               
-            <li><a href="/auth/github" class="btn btn-block">Logout</a></li>
+            <li><a href="/logout" class="btn btn-block">Logout</a></li>
             </ul>
         </div>
     </div>
