--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,34 @@
 h1{
     margin-top: 80px;
     display: block;
+    margin-left: 40px;
+    text-align: center;
 }
 .names{
     font-size: 30px;
-    display: block;
+    vertical-align: top;
+    text-align: center;
 }
 .image{
     margin: auto;
     vertical-align: middle;
 }
-.container{
-    padding: -30px;
+section{
+    margin-bottom: 20px;
+    border-bottom: 2px dotted black;
+    margin-top: 20px;
+}
+.imgg{
+    display: inline-block;
+}
+.rest{
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 20px;
+}
+.right{
+    position: absolute;
+    right: 100px;
+    vertical-align: top;
+    display: inline-block;
 }
