--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@ h1{
     font-size: 30px;
     vertical-align: top;
     text-align: center;
+    margin-bottom: -15px;
 }
 .image{
     margin: auto;
@@ -25,10 +26,11 @@ section{
     display: inline-block;
     vertical-align: top;
     margin-left: 20px;
+    font-size: 15px;
 }
 .right{
-    position: absolute;
-    right: 100px;
+    position: relative;
     vertical-align: top;
-    display: inline-block;
+    float: right;
+    margin-right: 20px;
 }
