--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">FFC Nightlife</a>
+            <a class="navbar-brand" href="/">Going</a>
         </div>
         
         <!-- menu -->
@@ -24,7 +24,7 @@
           </form>
             <ul class="nav navbar-nav navbar-right nav-tabs">
               
-            <li><a href="/auth/github" class="btn btn-block"><i>&#xf09b;</i></a></li>
+            <li><a href="/auth/github" class="btn btn-block"><img src = "https://image.flaticon.com/icons/png/512/25/25231.png" width="20px"></img></a></li>
             </ul>
         </div>
     </div>
@@ -37,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">FFC Nightlife</a>
+            <a class="navbar-brand" href="/">Going</a>
         </div>
         
         <!-- menu -->
