--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <%include header.ejs %>
 <%include nav.ejs %>
 <h1><%=term%></h1>
+<a href="/auth/github">link to github</a>
 <div class="container">
 <article>
   <% for(var i = 0; i < bars.length; i++){ %>
