--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,10 +10,14 @@
         <div class="image"><img src=<%=bars[i].image%> width="150px"></img></div></br>
       </div>
       <div class="rest">
-      <p class="names"><a href = <%=bars[i].url%>><%= bars[i].title %></a></p></br>
-      <%= bars[i].address %></br>
-      <%= bars[i].phone %> </br>
-      <p>Rating: <%= bars[i].rating %></p></br>
+      <p class="names"><a href = <%=bars[i].url%> style="color: #373737"> <%= bars[i].title %></a></p></br>
+      <span class="glyphicon glyphicon-map-marker"></span> <%= bars[i].address %></br>
+      <span class="glyphicon glyphicon-earphone"></span><%= bars[i].phone %> </br>
+      <div class="price"><span class="glyphicon glyphicon-glass"></span><%= bars[i].price %></br></div>
+      <div class="star-ratings-css">
+        <div class="star-ratings-css-top" style="width: <%= bars[i].rating * 21 + "%" %>"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+        <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+      </div>
       </div>
       <div class="right">
         <% if(authenticated === true){ %>
