simple changes in style

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
       </div>
       <div class="right">
         <% if(authenticated === true){ %>
-          <a id="<%= bars[i].id %>" class="going btn btn-primary">
+          <a id="<%= bars[i].id %>" class="going btn" style="color: white; background-color: #c0b283">
             <%=bars[i].totalAttending%> Going
           </a></br>
       <%}%>
