slight changes in css

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -4,14 +4,14 @@
           <div class="container">
             <% if(authenticated === false){ %>
             <div class="container-fluid">
-        <div class="navbar-header navbar-default">
+        <div class="navbar-header navbar-default" style="height: 70px">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Going</a>
+            <a class="navbar-brand going" href="/" style="color: #c0b283">GOING...</a>
         </div>
         
         <!-- menu -->
@@ -30,14 +30,14 @@
     </div>
          <% }else{ %>
          <div class="container-fluid">
-        <div class="navbar-header navbar-default">
+        <div class="navbar-header navbar-default" style="height: 70px">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Going</a>
+            <a class="navbar-brand going" href="/"  style="color: #c0b283">GOING...</a>
         </div>
         
         <!-- menu -->
