--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ body{
     background-attachment: fixed;
 }
 h1{
-    margin-top: 80px;
+    margin-top: 100px;
     display: block;
     margin-left: 40px;
     text-align: center;
@@ -69,4 +69,12 @@ section{
   padding: 0;
   display: block;
   z-index: 0;
+}
+.going{
+    margin-top: 5px;
+    font-size: 70px;
+    font-family: "Gloria Hallelujah";
+}
+#mynavbar{
+    margin-top: 5px;
 }
