slight changes in css

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,9 +11,9 @@
       </div>
       <div class="rest">
       <p class="names"><a href = <%=bars[i].url%> style="color: #373737"> <%= bars[i].title %></a></p></br>
-      <span class="glyphicon glyphicon-map-marker"></span> <%= bars[i].address %></br>
-      <span class="glyphicon glyphicon-earphone"></span><%= bars[i].phone %> </br>
-      <div class="price"><span class="glyphicon glyphicon-glass"></span><%= bars[i].price %></br></div>
+      <span class="glyphicon glyphicon-map-marker" style="margin-left: -2px"></span>&nbsp;&nbsp;<%= bars[i].address %></br>
+      <span class="glyphicon glyphicon-earphone"></span>&nbsp;&nbsp;<%= bars[i].phone %></br>
+      <div class="price"><span class="glyphicon glyphicon-glass"></span>&nbsp;&nbsp;<%= bars[i].price %></br></div>
       <div class="star-ratings-css">
         <div class="star-ratings-css-top" style="width: <%= bars[i].rating * 21 + "%" %>"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
         <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
