--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse navbar-right" id="mynavbar">
           <form class="navbar-form navbar-collapse navbar-right" method="GET" action="/search">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search" name="location" id="place" />
+              <input type="text" class="form-control" placeholder="Search" name="location" id="place" required/>
               <button type="submit" class="btn btn-default" value="search">Go</button>
             </div>
           </form>
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse navbar-right" id="mynavbar">
           <form class="navbar-form navbar-collapse navbar-right" method="GET" action="/search">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search" name="location" id="place" />
+              <input type="text" class="form-control" placeholder="Search" name="location" id="place" required/>
               <button type="submit" class="btn btn-default" value="search">Go</button>
             </div>
           </form>
